--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tonweb-ts",
-  "version": "0.0.60",
+  "name": "@fck-foundation/tonweb-ts",
+  "version": "0.0.1",
   "description": "TonWeb - TypeScript API for TON blockchain",
   "main": "src/index.js",
   "types": "dist/types/index.d.ts",
