--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fck-foundation/tonweb-ts",
   "version": "0.0.1",
-  "description": "TonWeb - TypeScript API for TON blockchain",
+  "description": "TonWeb-TS - TypeScript API for TON blockchain",
   "main": "src/index.js",
   "types": "dist/types/index.d.ts",
   "scripts": {
@@ -28,8 +28,8 @@
   "bugs": {
     "url": "https://github.com/fck-foundation/tonweb-ts/issues"
   },
-  "homepage": "https://github.com/toncenter/tonweb#readme",
-  "repository": "https://github.com/toncenter/tonweb",
+  "homepage": "https://github.com/fck-foundation/tonweb-ts#readme",
+  "repository": "https://github.com/fck-foundation/tonweb-ts",
   "dependencies": {
     "@ledgerhq/hw-transport-web-ble": "5.48.0",
     "@ledgerhq/hw-transport-webhid": "5.48.0",
